:sparkles: added api for rest-api image retrieval on devices
